fix for  menu overlapping the stb
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@6772 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/semantictoolbar.css
+++ b/extensions/SMWHalo/skins/semantictoolbar.css
@@ -167,7 +167,7 @@ a.plusminus:hover{
     margin-top: 10px;
     max-height: 80%;
     width: 100%;
-    z-index: 10;
+    z-index: 25;
     /*overflow: auto;*/
     position: relative;
 }
